--- a/web/css/modal.css
+++ b/web/css/modal.css
@@ -1,24 +1,109 @@
 /*modal*/
-.modal{position:fixed;z-index:99;top:0;right:0;bottom:0;left:0;display:none;;animation:fadeOut 0.5s !important;}
-.modal.active{display:block;animation:fadeIn 0.5s !important;}
-.modal-body{background:#fff;box-shadow:0 0 15px #ccc;margin:15% auto auto auto;border-radius:3px;}
-.modal-head{overflow:hidden;text-align:left;color:#2B344C;font-size:1.4em;padding:20px 15px}
-.modal-head>span{float:right;width:20px;height:20px;line-height:18px;text-align:center;cursor:pointer;border-radius:3px;border:1px solid #f8f8f8}
-.modal-head>span:hover{color:#fff;background:#3B86FF}
-.modal-content{padding:5px 15px 56px 15px}
-.modal-content>.promptModalIn{width:100%;height:60px;border-width:0 0 1px 0;border-color:#ccc}
-.modal-foot{overflow:hidden;border-radius:0 0 5px 5px;}
-.modal-foot>span{float:left;height:44px;line-height:44px;text-align:center;border-radius:0px;color:#fff;cursor:pointer}
-.modal-foot>span.btnLg{width:100%;}
-.modal-foot>span.btnMd{width:50%}
-.modal-foot>span.btnSucces{background:#3B86FF}
-.modal-foot>span.btnCancel{background:#333852}
-/*fadeIn fadeOut*/
+.modal {
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: none;
+    background:transparent;
+    animation: fadeOut 0.5s !important;
+}
+
+.modal.active {
+    display: block;
+    background:rgba(0,0,0,0.5);
+    animation: fadeIn 0.5s !important;
+}
+/*modal animation*/
 @keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
+    0% {
+        background:transparent;
+    }
+    100% {
+        background:rgba(0,0,0,0.5);
+    }
 }
+
 @keyframes fadeOut {
-    0% {opacity:1;}
-    100% {opacity:0;}
+    0% {
+        background:rgba(0,0,0,0.5);
+    }
+    100% {
+        background:transparent;
+    }
 }
+.modal-body {
+    background: #fff;
+    box-shadow: 0 0 15px #ccc;
+    margin: 15% auto auto auto;
+    border-radius: 5px;
+}
+
+.modal-head {
+    overflow: hidden;
+    text-align: left;
+    color: #2B344C;
+    font-size: 1.4em;
+    padding: 20px 15px
+}
+
+.modal-head > span {
+    float: right;
+    width: 20px;
+    height: 20px;
+    line-height: 18px;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 3px;
+    border: 1px solid #f8f8f8
+}
+
+.modal-head > span:hover {
+    color: #fff;
+    background: #3B86FF
+}
+
+.modal-content {
+    padding: 5px 15px 56px 15px
+}
+
+.modal-content > .promptModalIn {
+    width: 100%;
+    height: 60px;
+    border-width: 0 0 1px 0;
+    border-color: #ccc
+}
+
+.modal-foot {
+    overflow: hidden;
+    border-radius: 0 0 5px 5px;
+}
+
+.modal-foot > span {
+    float: left;
+    height: 44px;
+    line-height: 44px;
+    text-align: center;
+    border-radius: 0px;
+    color: #fff;
+    cursor: pointer
+}
+
+.modal-foot > span.btnLg {
+    width: 100%;
+}
+
+.modal-foot > span.btnMd {
+    width: 50%
+}
+
+.modal-foot > span.btnSucces {
+    background: #3B86FF
+}
+
+.modal-foot > span.btnCancel {
+    background: #333852
+}
+
