--- a/web/css/public.css
+++ b/web/css/public.css
@@ -9,7 +9,7 @@ small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td {
     margin: 0;padding: 0;border: 0;outline: 0;vertical-align: baseline;background: transparent;
 }
-body{font-size:1em;line-height: 1;min-width:1366px;}
+body{font-size:1em;min-width:1366px;}
 body>#root{height:100%}
 ol, ul {list-style: none;}
 blockquote, q {quotes: none;}
