--- a/web/css/steps.css
+++ b/web/css/steps.css
@@ -2,11 +2,11 @@
 .stepContainer{width:600px;padding-bottom:10px}
 .stepContainer .steps{position:relative;width:100%;height:60px;}
 .stepContainer .steps div,.stepContainer .steps ul{position:absolute}
-.stepContainer .steps div.line{z-index:1;border-bottom:1px solid #3B86FF;width:calc(100% - 120px);margin-left:60px;margin-top:30px}
+.stepContainer .steps div.line{z-index:1;border-bottom:1px solid #1890ff;width:calc(100% - 120px);margin-left:60px;margin-top:30px}
 .stepContainer .steps ul.stepsPoints{z-index:2;width:100%;overflow:hidden;margin-top:21px}
 .stepContainer .steps ul li{width:20%;float:left;text-align:center}
-.stepContainer .steps ul.stepsPoints span{display:inline-block;width:20px;height:20px;line-height:18px;border-radius:50%;border:1px solid #3B86FF;text-align:center;background:#fff}
-.stepContainer .steps ul.stepsPoints span.iconfont{color:#3B86FF;font-size:18px !important;}
+.stepContainer .steps ul.stepsPoints span{display:inline-block;width:20px;height:20px;line-height:18px;border-radius:50%;border:1px solid #1890ff;text-align:center;background:#fff}
+.stepContainer .steps ul.stepsPoints span.iconfont{color:#1890ff;font-size:18px !important;}
 .stepTextList span{display:inline-block;width:120px;text-align:center;}
 .stepTextList span b{padding-bottom:15px;border-bottom:1px solid transparent;display:inline-block;height:30px;}
-.stepTextList span.active b{border-bottom:1px solid #3B86FF;color:#3B86FF}
+.stepTextList span.active b{border-bottom:1px solid #1890ff;color:#1890ff}
