--- a/web/css/modal.css
+++ b/web/css/modal.css
@@ -39,6 +39,8 @@
     box-shadow: 0 0 15px #ccc;
     margin: 15% auto auto auto;
     border-radius: 5px;
+    width:0;
+    transition: width 0.15s;
 }
 
 .modal-head {
