--- a/web/css/public.css
+++ b/web/css/public.css
@@ -29,6 +29,15 @@ input,select,textarea{
 }
 textarea{overflow: auto}/*取消IE文本框滚动条*/
 button{outline:none;text-decoration:none;border:none;cursor:pointer}
+/*禁止右键选中网页文字,在body标签中添加unselectable="on"*/
+body{
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Chrome/Safari/Opera */
+    -khtml-user-select: none; /* Konqueror */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently not supported by any browser */
+}
 /*滚动条*/
 /*IE内核*/
 body{
