--- a/web/css/modal.css
+++ b/web/css/modal.css
@@ -1,5 +1,5 @@
 /*modal*/
-.modal {
+.ui-modal {
     position: fixed;
     z-index: 99;
     top: 0;
@@ -12,7 +12,7 @@
     animation: fadeOut 0.6s !important;
 }
 
-.modal.active {
+.ui-modal.active {
     display: block;
     background:rgba(0,0,0,0.1);
     animation: fadeIn 0.6s !important;
@@ -27,25 +27,26 @@
     0% {background:rgba(0,0,0,0.1);}
     100% {background:transparent;}
 }
-.modal-body {
+.ui-modal-body {
     background: #fff;
-    box-shadow: 0 0 15px #515151;
+    box-shadow: 0 0 15px #d9d9d9;
     margin: 15% auto auto auto;
-    border-radius: 3px;
+    border-radius: 5px;
     width:0;
     opacity:1;
     transition: width 0.25s;
     -webkit-transition: width 0.25s;
     -moz-transition: width 0.25s;
 }
-.modal-body.active{
+.ui-modal-body.active{
+    width:auto;
     animation: bodyShow 0.6s;
 }
 @keyframes bodyShow {
     0% {opacity:0;}
     100% {opacity:1;}
 }
-.modal-head {
+.ui-modal-head {
     overflow: hidden;
     text-align: left;
     color: #2B344C;
@@ -53,60 +54,62 @@
     padding: 20px 15px
 }
 
-.modal-head > span {
+.ui-modal-head > span {
     float: right;
     width: 20px;
     height: 20px;
     line-height: 18px;
     text-align: center;
     cursor: pointer;
-    border: 1px solid #f8f8f8
+    border: 1px solid #f8f8f8;
+
 }
 
-.modal-head > span:hover {
+.ui-modal-head > span:hover {
     color: #fff;
-    background: #1890ff
+    background: #1890ff;
 }
 
-.modal-content {
+.ui-modal-content {
     padding: 5px 15px 56px 15px
 }
 
-.modal-content > .promptModalIn {
+.ui-modal-content > .promptModalIn {
     width: 100%;
     height: 60px;
     border-width: 0 0 1px 0;
     border-color: #ccc
 }
 
-.modal-foot {
-    overflow: hidden;
+.ui-modal-foot {
     border-radius: 0 0 3px 3px;
+    padding:20px 15px;
+    text-align:right;
 }
 
-.modal-foot > span {
-    float: left;
-    height: 44px;
-    line-height: 44px;
+.ui-modal-foot > span {
+    margin-right:10px;
+    padding:5px 8px;
     text-align: center;
-    border-radius:0 !important;
+    border-radius:3px;
     color: #fff;
-    cursor: pointer
+    cursor: pointer;
+    opacity:0.8;
 }
-
-.modal-foot > span.btnLg {
-    width: 100%;
+.ui-modal-foot > span:hover {
+    opacity:1;
 }
-
-.modal-foot > span.btnMd {
-    width: 50%
-}
-
-.modal-foot > span.btnSucces {
+.ui-modal-foot > span.btnOK {
     background: #1890ff
 }
 
-.modal-foot > span.btnCancel {
-    background: #333852
+.ui-modal-foot > span.btnNO {
+    background: #999
+}
+.ui-modal-foot > span.btnLg {
+    width: 100%;
+}
+.ui-modal-foot > span.btnMd {
+    width: 50%
 }
 
