--- a/web/css/pagination.css
+++ b/web/css/pagination.css
@@ -1,10 +1,10 @@
 /**分页CSS**/
-.ui-pagi{
+.ui-pagination{
     text-align:center;
     padding:10px 0;
     font-family: "黑体" !important;
 }
-.ui-pagi a{
+.ui-pagination a{
     display: inline-block;
     border: 1px solid #d9d9d9;
     color:rgba(0,0,0,0.65);
@@ -19,12 +19,12 @@
     font-size: 14px;
     opacity:0.8;
 }
-.ui-pagi a:hover{
+.ui-pagination a:hover{
     opacity:1;
     border: 1px solid #1890ff;
     color:#1890ff;
 }
-.ui-pagi-show{
+.ui-pagination-show{
     font-size:12px;
     padding:0 8px;
     color:#999;
@@ -32,7 +32,7 @@
 
 
 /*跳到第几页*/
-.ui-pagi-toPageNum{
+.ui-pagination-toPageNum{
     margin-left: 5px;
     display: inline-block;
     padding: 0px !important;
@@ -40,7 +40,7 @@
     border-radius:3px;
     font-size: 12px;
 }
-.ui-pagi-toPageNum input {
+.ui-pagination-toPageNum input {
     height: 26px;
     line-height: 26px;
     text-indent: 0;
